messin around with typefaces

--- a/src/themes/fonts.css
+++ b/src/themes/fonts.css
@@ -1,1 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=VT323&family=Pompiere&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=VT323&family=Pompiere&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,600;1,700&family=Overpass:wght@100;400;600&family=Special+Elite&display=swap');
